[package]
name = "pcn"
version = "0.1.0"
edition = "2021"

[dependencies]
cudarc = { version = "0.16.6", features = ["cuda-12090"] }
petgraph = "0.7.1"
rand = { version = "0.9.0", features = ["thread_rng"] }
tensorflow = { version = "0.21.0", optional = true }
thiserror = "2.0.12"

[features]
tf = ["dep:tensorflow"]
